fixed alignment of patient set div

--- a/DataDownloader/assets/DataDownloader.css
+++ b/DataDownloader/assets/DataDownloader.css
@@ -83,12 +83,12 @@ DIV#DataDownloader-mainDiv #DataDownloader-configTable DIV.options {
 DIV#DataDownloader-mainDiv #DataDownloader-configTable LABEL.aggMargin {
 	margin-right: 10px;
 }
-DIV#DataDownloader-mainDiv DIV.droptrgtlbl {
-    padding: 6px;
-    width:80px;
-    float: left;
-    font-weight:bold;
-    color:#666;
+DIV#DataDownloader-mainDiv #DataDownloader-patientSetDropTrgtLbl {
+	padding: 6px;
+	width:80px;
+	font-weight:bold;
+	color:#666;
+	vertical-align: middle;
 }
 DIV#DataDownloader-mainDiv DIV.droptrgtInit {
 	padding: 10px;
@@ -122,10 +122,16 @@ DIV#DataDownloader-mainDiv DIV.droptrgt {
 	white-space:nowrap;
 }
 DIV#DataDownloader-mainDiv #DataDownloader-PRSDROP {
-	padding: 5px 10px;
+	padding: 10px;
+	background: #DEEBEF;
+	font-weight: bold;
+	text-align:left;
+	border: 1px solid #63758C;
+	width:300px;
 	overflow:hidden;
 	white-space:nowrap;
-	width:300px;
+	vertical-align: middle;
+	display: inline-block;
 }
 DIV#DataDownloader-mainDiv droptrgt .concptItem {
 	padding: 5px 10px;
